# portfolio

./: .gitignore  README.md  data.json  db.sqlite3  env-template  manage.py  pyproject.toml  requirements.in  requirements.txt
blog/: admin.py  apps.py  feeds.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_post_original_url.py
blog/templates/blog/: _blog.html  _post.html
blog/templatetags/: markdown_extras.py
portfolio/: admin.py  apps.py  models.py  settings.py  urls.py  views.py
portfolio/migrations/: 0001_initial.py  0002_project_url.py  0003_project_blurb.py  0004_remove_project_technology.py  0005_project_core_tech_project_supporting_tech_and_more.py  0006_project_screenshot.py  0007_alter_project_screenshot.py  0008_alter_project_options_project_order.py
portfolio/templates/: _about.html
portfolio/templates/portfolio/: _about.html  _details.html  _project.html  _projects.html  index.html
project/: settings.py  urls.py
theme/static_src/: tailwind.config.js
theme/static_src/src/: styles.css
theme/templates/: base.html
