[project]
name = "portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.38.46",
    "dj-database-url>=3.1.2",
    "django>=5.2.3",
    "django-storages>=1.14.6",
    "django-tailwind>=4.0.1",
    "gunicorn>=23.0.0",
    "markdown>=3.10.2",
    "pillow>=12.3.0",
    "psycopg2-binary>=2.9.10",
    "psycopg[binary]>=3.3.4",
    "python-decouple>=3.8",
]
